# cua-eval-and-finetuning

./: .flake8  Makefile  README.md  datasheet.md  pyproject.toml  requirements.txt
UI-TARS/: agent_core.py  config.py  llm_client.py  vision.py
agents/: README.md
agents/Anthropic_CU/: main.py
agents/OpenAI_Operator/: main.py
agents/ShowUI/: main.py
agents/UI-TARS/: agent_core.py  config.py  llm_client.py  vision.py
evaluators/: README.md  anthropic_evaluator.py  common.py  factory.py  llava_evaluator.py  openai_evaluator.py
models/Anthropic_CU/: main.py
models/ShowUI/: main.py
research/: README.md  requirements.txt  run_all.py
research/common/: action_parser.py  image_utils.py  logger.py  openclaw_client.py
research/macosworld/: run_macosworld.py
research/osworld/: agent.py  run_osworld.sh
research/windows_agent_arena/: run_waa.py
rl_tuning/: README.md  __init__.py  logprobs.py  rollout_env.py  trainer.py
run_vm/: README.md  config.py  main.py  utm_vm.py
